--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions2.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions2.Rmd
@@ -154,23 +154,31 @@ CS1B-1120
 :5.000
 The two variables ‘vs’ and ‘am’ are categorical variables. (This can be identified using str or summary function)
 mtcars1 <- mtcars[,c(1:7,10,11)]
-[5]
+
+
+
+
+
+
+Exercise 3
+==================================================
 iii)
-> str(mtcars1)
-'data.frame': 32 obs. of 9 variables:
-$ mpg : num 21 21 22.8 21.4 18.7 18.1 14.3 24.4 22.8 19.2 ...
-$ cyl : num 6 6 4 6 8 6 8 4 4 6 ...
-$ disp: num 160 160 108 258 360 ...
-$ hp : num 110 110 93 110 175 105 245 62 95 123 ...
-$ drat: num 3.9 3.9 3.85 3.08 3.15 2.76 3.21 3.69 3.92 3.92 ...
-$ wt : num 2.62 2.88 2.32 3.21 3.44 ...
-$ qsec: num 16.5 17 18.6 19.4 17 ...
-$ gear: num 4 4 4 3 3 3 3 4 4 4 ...
-$ carb: num 4 4 1 1 2 1 4 2 2 4 ...
+
+```{r}
+str(mtcars1)
+```
+
 There are 32 observations (car models) and 9 variables (car features) in the dataset.
+
+Exercise 4
+==================================================
 iv)
+
+
+```{r}
 mtcars1.pca <- prcomp(mtcars1,center = TRUE,scale=TRUE)
-> summary(mtcars1.pca)
+summary(mtcars1.pca)
+```
 Importance of components:
 PC1 PC2
 Standard deviation
