--- a/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
+++ b/00-F1-CS1B-ASI-Nov2020/F1_Questions4.Rmd
@@ -1,12 +1,5 @@
 Q. 4)
-If obese is defined to be BMI above 30, use binom.test to calculate 99% confidence
-interval for proportion of obese people and comment on the likelihood if more than
-20 pc are obese.
-Claim frequency can be calculated as claim count divided by number of policyholders.
-Test whether claim frequency is different between obese and others.
-(6)
-(6)
-[24]
+
 The CDC and EISS detect influenza activity through clinical data including Influenza-like
 Illness (ILI) physician visits on weekly basis. The objective of this question is to estimate
 influenza-like illness (ILI) activity using Google web search logs.
@@ -18,6 +11,9 @@ week.
 "Queries" - This column lists the fraction of queries that are ILI-related for the corresponding
 week, adjusted to be between 0 and 1 (higher values correspond to more ILI-related search
 queries).
+
+Exercises
+===================================================
 i)
 Plot a histogram of the dependent variable, ILI. Comment on the shape of the
 distribution. (3)
@@ -64,14 +60,19 @@ $ ILI
 $ Queries: num 0.238 0.22 0.226 0.238 0.224 ...
 hist(FluTrain$ILI)
 The data is positively skewed. Most of the ILI values are small, with a relatively small number of much larger values.
-[3]
+
+Exercise 2
+=========================================================================
 ii)
 plot(FluTrain$Queries,log(FluTrain$ILI))
 There is a positive linear relationship between log(ILI) and Queries.
 i.e. more the number of the Google search queries, higher the number of ILI-related physician visits.
 [4]
-Page 6 of 8IAI
-CS1B-1120
+
+
+
+Exercise 3
+=========================================================================
 iii)
 FluTrend1 = lm(log(ILI) ~ Queries, data = FluTrain)
 > summary (FluTrend1)
@@ -104,12 +105,17 @@ Residual standard error: 0.2995 on 415 degrees of freedom
 Multiple R-squared: 0.709,
 Adjusted R-squared: 0.7083
 F-statistic: 1011 on 1 and 415 DF, p-value: < 2.2e-16
-[2]
-[6]
+
+
+Exercise 4
+=========================================================================
 iv)
 ln y = -0.49934 +2.96129x [2]
 where x is the google search queries and y is the percentage of ILI related physician visits. [1]
-[3]
+
+
+Exercise 5
+=========================================================================
 v)
 From the R output, R-squared value is 0.709. [1]
 correlation <- cor(FluTrain$Queries,log(FluTrain$ILI))
